--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hiệu Ứng Trái Tim</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome to My Page</h1>
-    <p>This is a simple HTML document.</p>
-    <p>Here is a link to <a href="https://www.example.com">Example.com</a>.</p>
-    <p>Here is an image:</p>
-    <img src="https://via.placeholder.com/150" alt="Placeholder Image">
-    
-    <!-- Adding a link to another page -->
+    <script src="script.js"></script>
 </body>
+
 </html>
