Ay zo Long dep trai vl

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiệu Ứng Trái Tim</title>
+    <meta name="viewport" content="width=, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <title>Tài lịu tình iu ❤️</title>
 </head>
 <body>
+    <footer>
+        <p>© 2025 Tài lịu tình iu ❤️</p>
+        <p>Creater by SmileDEV</p>
+    </footer>
+
+
     <script src="script.js"></script>
 </body>
 </html>
