--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Tài lịu tình iu ❤️</title>
+    <title>Tài liệu tình yêu ❤️</title>
 </head>
 <body>
     <footer>
-        <p>© 2025 Tài lịu tình iu ❤️</p>
-        <p>Creater by SmileDEV</p>
+        <p>© 2025 Tài liệu tình yêu ❤️</p>
+        <p>Created by SmileDEV</p>
     </footer>
-
 
     <script src="script.js"></script>
 </body>
