--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <footer>
-        <p>© 2025 Tài liệu tình yêu ❤️</p>
-        <p>Created by SmileDEV</p>
+        <p>© 2025 SMILE DEV ❤️</p>
     </footer>
 
     <script src="script.js"></script>
