--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Tài liệu tình yêu ❤️</title>
 </head>
 <body>
+    <form action="">
+        <input type="text" placeholder="Điền tên của bé ..." id="search-input">
+    </form>
     <footer>
         <p>© 2025 SMILE DEV ❤️</p>
     </footer>
-
     <script src="script.js"></script>
 </body>
 </html>
