--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Tài liệu tình yêu ❤️</title>
 </head>
+
 <body>
-    <form action="">
-        <input type="text" placeholder="Điền tên của bé ..." id="search-input">
-    </form>
+    <div class="password-form">
+        <h2>Nhập mật khẩu</h2>
+        <form id="passwordForm">
+            <input type="password" id="password" placeholder="Nhập mật khẩu" required>
+            <button type="submit">Gửi</button>
+        </form>
+    </div>
     <footer>
         <p>© 2025 SMILE DEV ❤️</p>
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
